--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
+    "expo-camera": "^16.0.18",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.24",
